# audio-video-codification

./: CMakeLists.txt
Trabalho_1/BitStream/: BitStream.cpp  BitStream.h  main.cpp  test_file_1
Trabalho_1/BitStream_test/: TextTranscoder.cpp  TextTranscoder.h  main.cpp  test_file_2  test_file_2_decoded  test_file_2_decoded.txt
Trabalho_1/Docs/: 1_Trabalho.docx
Trabalho_1/Golomb/: BitStreamReader.cpp  BitStreamReader.h  BitStreamWriter.cpp  BitStreamWriter.h  Golomb.cpp  Golomb.h  ecgDIFF_decoded.csv  ecgDIFSF_decoded.csv  ecgRAW_decoded.csv  main.cpp  output_file  test_file_decoded
Trabalho_2/: CMakeLists.txt  LosslessAudioCodec.cpp  LosslessAudioCodec.h  LossyAudioCodec.cpp  LossyAudioCodec.h  ecgDIFF.csv  ecgRAW.csv  trabalho2.cpp  x.sh
Trabalho_2/Golomb/: Decode.cpp  Encode.cpp  Golomb.h
Trabalho_3/: CMakeLists.txt  DisplayVideo.cpp  IntraFrameLossless.cpp  IntraFrameLossy.cpp  RawIntraFrameCodecLossless.cpp  RawIntraFrameCodecLossless.h  RawIntraFrameCodecLossy.cpp  RawIntraFrameCodecLossy.h  VideoCmp.cpp  VideoFromFile.cpp  VideoResize.cpp
Trabalho_3/Golomb/: BitStream.cpp  BitStream.h  Golomb.cpp
